<resources>
    <string name="app_name">TuitionClasses</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="welcome">WELCOME</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="logout">Logout</string>
    <string name="login_as_teacher">login as Teacher</string>
    <string name="hello_you">Hello You!</string>
    <string name="login_as_student">login as Student</string>
</resources>