<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelComeScreenActivity"
    android:background="@color/cyan">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_you"
        android:textSize="50dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_books"
        android:layout_width="220dp"
        android:layout_height="190dp"
        android:background="@drawable/books"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_welcome"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_as_teacher"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/img_books"
        app:layout_constraintStart_toStartOf="@+id/txt_welcome"
        app:layout_constraintEnd_toEndOf="@+id/txt_welcome"
        app:layout_constraintBottom_toTopOf="@+id/btn_teacher"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_teacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constrainedWidth="true"
        android:layout_marginTop="10dp"

        app:layout_constraintStart_toStartOf="@+id/txt_welcome"
        app:layout_constraintEnd_toEndOf="@+id/txt_welcome"
        android:background="@drawable/custom_btn"
        app:layout_constraintTop_toBottomOf="@+id/txt_teacher"
        android:text="@string/teacher"
        android:textColor="@color/teal_700"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="or"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginVertical="20dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_student"
        app:layout_constraintTop_toBottomOf="@+id/btn_teacher"
        app:layout_constraintStart_toStartOf="@+id/txt_welcome"
        app:layout_constraintEnd_toEndOf="@+id/txt_welcome"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_as_student"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txt_welcome"
        app:layout_constraintEnd_toEndOf="@+id/txt_welcome"
        app:layout_constraintBottom_toTopOf="@+id/btn_student"
        android:layout_marginBottom="10dp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_btn"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="@+id/txt_welcome"
        app:layout_constraintEnd_toEndOf="@+id/txt_welcome"
        app:layout_constraintTop_toBottomOf="@+id/btn_teacher"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/student"
        android:layout_marginBottom="45dp"
        android:textColor="@color/teal_700"/>

</androidx.constraintlayout.widget.ConstraintLayout>